[package]
name = "sqlite-varint"
version = "0.1.1"
authors = ["Midas Lambrichts <midaslamb@gmail.com>"]
edition = "2018"
keywords = ["sqlite", "varint"]
description = "Utility functions for dealing with varints from SQLite."
repository = "https://github.com/MidasLamb/sqlite-varint"
license = "MIT"

[lib]
name = "sqlite_varint"
bench = false

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "read_benchmark"
harness = false
